--- a/frontend/src/styles/NotesStyles.css
+++ b/frontend/src/styles/NotesStyles.css
@@ -199,6 +199,7 @@
     text-align: center;
     margin: 0 auto;
     padding: 0;
+    margin-top: 5rem;
   }
   .notesSection {
     display: flex;
@@ -228,7 +229,6 @@
     max-height: 180px;
     border: 1px solid black;
     font-size: 1rem;
-
     margin: 0.5rem 0;
     border-radius: 16px;
   }
@@ -237,18 +237,16 @@
     background-color: #ddd;
     border: none;
     color: black;
-    /*   padding: 10px 20px; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    /*   margin: 15px; */
     cursor: pointer;
     border-radius: 16px;
   }
 }
 
-
 @media (min-width: 2400px) {
   .notesComponent {
     margin-left: 15rem;
-  }}
+  }
+}
