--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -37,12 +37,12 @@
   box-shadow: 20px 20px 60px rgba(194, 249, 255, 0.2),
     -20px -20px 60px rgba(194, 249, 255, 0.3);
   font-weight: bolder;
-  background-color: rgb(148, 65, 166);
-  color: rgb(235, 233, 233);
+  background-color: rgba(237, 160, 211, 0.7);
+  color:black
 }
 
 .profile-back-delete-btns:hover {
-  background-color: rgb(22, 219, 154);
+  background-color: #43aba5;
   cursor: pointer;
 }
 
@@ -51,12 +51,12 @@
   font-weight: 600;
   border-radius: 5px;
   border: none;
-  background-color: rgb(82, 219, 212);
+  background-color: rgba(123, 212, 251, 0.5);
   padding: 0.3rem 0.5rem;
 }
 
 .profile-edit-logout-btns:hover {
-  background-color: rgb(22, 219, 154);
+  background-color: #43aba5;
   cursor: pointer;
 }
 
